cmake_minimum_required(VERSION 3.9)
project(Session02)

set(CMAKE_CXX_STANDARD 11)

add_executable(Session02 main.cpp bisection.cpp 00reveiw.cpp 01reviewfloat.cpp 01breviewfloat.cpp 02functions.cpp 02bfunctions.cpp 03loopopt.cpp 04functions.cpp 05inlineornot.cpp 05functions.cpp 06strings.cpp 07io.cpp 08passbyref.cpp 09returningmultiple.cpp 10pointerstofunction.cpp)
add_executable(01reviewfloat 01reviewfloat.cpp)
add_executable(02functions 02functions.cpp)
add_executable(02bfunctions 02bfunctions.cpp)
add_executable(03loopopt 03loopopt.cpp)
add_executable(05functions 05functions.cpp)
add_executable(06strings 06strings.cpp)
add_executable(07io 07io.cpp)
add_executable(09returningmultiple 09returningmultiple.cpp)
add_executable(10pointerstofunction 10pointerstofunction.cpp)